[package]
name = "dq-project"
version = "0.1.0"
edition = "2021"
description = "DQProject - DeepQuest DeFi Platform on Solana"
authors = ["DQTeam"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []
no-idl = []
no-token = []
cpi = ["no-entrypoint"]
default = ["no-entrypoint", "no-idl", "no-token"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
spl-token = "0.40.0"
spl-associated-token-account = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
num-traits = "0.2"
num-derive = "0.4"

[dev-dependencies]
anchor-lang = { version = "0.30.0", features = ["error"] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
overflow-checks = true

[profile.debug]
overflow-checks = true
